--- a/styles/_list.scss
+++ b/styles/_list.scss
@@ -8,8 +8,8 @@
 }
 
 .section__box{
-  height:30%;
-  width:20%;
+  height:40%;
+  width:15%;
   min-height:200px;
   min-width:150px;
 }
@@ -24,7 +24,8 @@
 }
 
 .section__day{
-  margin-left:15%;
+  padding:10%;
+  padding-bottom:0%;
 }
 
 li{
@@ -35,8 +36,8 @@ li{
 
 
 img{
-    width: 60%;
-    height: 60%;
+    width: 55%;
+    height: 50%;
 }
 .section__font--second{
     font-size:2em;
