--- a/styles/_mediaQueries.scss
+++ b/styles/_mediaQueries.scss
@@ -7,11 +7,18 @@
     margin-left:12.5%;
   }
   .section__box{
-
-    margin-top:5%;
+    margin-top:2%;
+    margin-bottom:5%;
     height:25%;
-    width:80%;
-    min-height:15%;
-    min-width:10%;
+    width:50%;
+    min-height: 150px;
+    min-width: 150px;
   }
+  .section__location{
+    margin:0;
+  }
+  .section__font--main{
+    font-size: 60px;
+  }
+
 }
